<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_shark_blurred">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:titleTextColor="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_textView"
        android:text="@string/verification_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text_login"/>
    <EditText
        android:id="@+id/code_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/ic_key"
        android:hint="@string/verification_hint"
        android:gravity="center"
        android:textSize="@dimen/text_login"
        android:textColor="@color/white"
        android:inputType="number"
        android:layout_margin="@dimen/margin_layout"
        android:lines="@string/line_count"/>
    <Button
        android:id="@+id/sign_up_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/done"
        android:padding="10dp"
        android:textColor="@color/white"
        android:textSize="@dimen/text_login"
        android:gravity="center"
        android:layout_marginLeft="@dimen/padding_textView"
        android:layout_marginRight="@dimen/padding_textView"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_border"
        android:textAllCaps="false"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resent_verify"
            android:textColor="@color/white"
            android:textSize="@dimen/text_login"
            android:padding="@dimen/padding_textView"
            android:gravity="center"
            android:layout_alignParentBottom="true"
            />
    </RelativeLayout>

</LinearLayout>