<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/sign_up_layout"
    android:background="@mipmap/bg_shark_blurred">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@android:color/transparent"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="3"
                android:src="@mipmap/ic_avatar_holder"

                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="4"
                android:orientation="vertical"
                android:padding="@dimen/padding_textView">
                <EditText
                    android:id="@+id/name_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:hint="@string/sig_up_name"
                    android:gravity="center"
                    android:drawableLeft="@mipmap/ic_user"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login"
                    android:ellipsize="end"
                    android:lines="@string/line_count"
                    />
                <EditText
                    android:id="@+id/email_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sig_up_email"
                    android:gravity="center"
                    android:drawableLeft="@mipmap/ic_email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login"
                    android:lines="@string/line_count"
                    />
                <EditText
                    android:id="@+id/password_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sig_up_pass"
                    android:textSize="@dimen/text_login"
                    android:gravity="center"
                    android:drawableLeft="@mipmap/ic_lock"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:lines="@string/line_count"
                    />
                <EditText
                    android:id="@+id/password_retype_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sig_up_retype"
                    android:textSize="@dimen/text_login"
                    android:gravity="center"
                    android:drawableLeft="@mipmap/ic_lock"
                    android:textColor="@color/white"
                    android:inputType="textPassword"
                    android:lines="@string/line_count"
                    />
            </LinearLayout>

            <Button
                android:id="@+id/sign_up_register"
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="1"
                android:text="@string/sign_up"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="@dimen/text_login"
                android:gravity="center"
                android:layout_marginLeft="@dimen/padding_textView"
                android:layout_marginRight="@dimen/padding_textView"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_border"
                android:textAllCaps="false"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="2"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>