<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/bg_shark_blurred"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="10">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/set_sum"
                android:paddingLeft="@dimen/padding_logo"
                android:paddingRight="@dimen/padding_logo"
                android:paddingTop="@dimen/padding_logo">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:src="@mipmap/logo" />

                <ImageView
                    android:layout_width="@dimen/width_version_icon"
                    android:layout_height="@dimen/height_version_icon"
                    android:layout_weight="7"
                    android:src="@mipmap/logo_version" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="3.5"
                android:orientation="vertical"
                android:padding="@dimen/padding_textView">

                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_email"
                    android:gravity="center"
                    android:hint="@string/hint_email"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login"
                    android:ellipsize="start"
                    android:lines="@string/line_count"/>

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:drawableLeft="@mipmap/ic_lock"
                    android:gravity="center"
                    android:hint="@string/hint_pass"
                    android:inputType="textPassword"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login"
                    android:lines="@string/line_count"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/set_sum"
                android:layout_weight="4.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/login"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/button"
                    android:layout_marginLeft="@dimen/padding_textView"
                    android:layout_marginRight="@dimen/padding_textView"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:text="@string/login"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/facbook_login"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button"
                        android:layout_marginLeft="@dimen/padding_textView"
                        android:layout_marginRight="@dimen/padding_textView"
                        android:layout_marginTop="10dp"
                        android:background="@color/colorPrimary"
                        android:gravity="center"
                        android:text="@string/facebook_login"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_login" />
                </LinearLayout>

                <TextView
                    android:id="@+id/forget_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:gravity="center"
                    android:text="@string/forget_pass"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_login"
                    android:textStyle="italic" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp">

                    <Button
                        android:id="@+id/sign_up"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/button"
                        android:layout_marginLeft="@dimen/padding_textView"
                        android:layout_marginRight="@dimen/padding_textView"
                        android:background="@drawable/button_border"
                        android:gravity="center"
                        android:text="@string/sign_up"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/text_login" />
                </FrameLayout>
            </LinearLayout>


        </LinearLayout>
    </ScrollView>
</LinearLayout>